WexGit/Wex_DX/force-app/main/default/objects/BOCA_IDs__c/BOCA_IDs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>IDs for orgs and email templates related to BOCA</description>
    <label>BOCA IDs</label>
</CustomObject>