WexGit/Wex_DX/force-app/main/default/objects/BOCA_IDs__c/fields/BOCA_Sell_Sheet__c.field-meta.xml
<CustomField>
    <fullName>BOCA_Sell_Sheet__c</fullName>
    <description>Email Template IDS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BOCA Sell Sheet Email</label>
    <length>22</length>
    <type>Text</type>
</CustomField>