WexGit/Wex_DX/force-app/main/default/objects/BOCA_IDs__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email_Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>