WexGit/Wex_DX/force-app/main/default/objects/BOCA_IDs__c/fields/Email_Address_Noreply__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Noreply__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email_Address_Noreply</label>
    <length>50</length>
    <type>Text</type>
</CustomField>