WexGit/Wex_DX/force-app/main/default/objects/BOCA_IDs__c/fields/Instance_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Instance_Prefix__c</fullName>
    <description>The prefix for this SF instance</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The prefix for this SF instance</inlineHelpText>
    <label>Instance Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>