WexGit/Wex_DX/force-app/main/default/objects/BOCA_IDs__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>Org Ids for APEX</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Org_Id</label>
    <length>22</length>
    <type>Text</type>
</CustomField>